test/tests/stages/14_pointers/invalid_types/extra_credit/compound_mod_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(10)
  ;
  int
  *
  identifier(ptr)
  =
  &
  identifier(i)
  ;
  identifier(i)
  %=
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
